<resources>

    <string name="app_name">KindergartenGame</string>
    
    <string name="global_imageViewBackgroundDesc">Image Background</string>
    <string name="global_imageViewAvatarDesc">Avatar</string>
    <string name="global_textViewTopTitle">Top Title</string>
    
    <string name="globalGame_imageView">Image</string>
    
    <!-- User Profile -->
    <string name="userProfile_textViewUserName">User Name</string>
    <string name="userProfile_buttonLearn">Learn</string>
    <string name="userProfile_buttonPlay">Play</string>
    <string name="userProfile_buttonScores">Scores</string>
    <string name="userProfile_buttonSettings">Settings</string>
    <string name="userProfile_buttonAbout">About</string>

    <!-- Log In -->
    <string name="login_buttonNewUser">Create New User</string>
    <string name="login_buttonExistingUser">Existing User</string>
    
    <!-- New User -->
    <string name="newUser_textViewEnterName">Enter Name: </string>
    <string name="newUser_editTextName">&lt;Your Name&gt;</string>
    
    <!-- Existing User -->
    <string name="existingUser_textViewUserName">User Name</string>
    
    <!-- Menu -->
    <string name="menu_buttonWriteLetters">Write Letters</string>
    <string name="menu_buttonWriteNumbers">Write Numbers</string>
    <string name="menu_buttonCountNumbers">Count Numbers</string>
    <string name="menu_buttonColors">Colors</string>
    <string name="menu_buttonShapes">Shapes</string>
    
    <!-- Scores Preview -->
    <string name="scorespreview_textViewTimesPlayed">(times played)</string>
    <string name="scorespreview_buttonPrevious">Previous</string>
    <string name="scorespreview_buttonNext">Next</string>
    <string name="scorespreview_textViewDateAndTimeVal">Date and Time</string>
    <string name="scorespreview_textViewTotalScoreLbl">Total Score:</string>
    <string name="scorespreview_textViewGameCategory">Game Category</string>
    
    <!-- Learn Write -->
    <string name="learnWrite_buttonLetter">ABC</string>
    <string name="learnWrite_buttonNumber">123</string>
    
    <!-- Number game -->
    <string name="numberGame_textViewNumberGameTitle">Guess the missing number</string>
    <string name="numberGame_textViewN">N</string>
    
    <!-- Writing game -->
    <string name="writingGame_buttonSubmit">Submit</string>
    <string name="writingGame_buttonClear">Clear</string>
    <string name="writingGame_imageViewDesc">writing image</string>
    
    <!-- Learn Item -->
    <string name="learnItem_buttonPrevious">&lt;</string>
    <string name="learnItem_buttonNext">&gt;</string>
    <string name="learnItem_imageViewDesc">Main image</string>
    
</resources>
