<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ImageView
        android:id="@+id/global_imageViewBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/global_imageViewBackgroundDesc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="@dimen/userProfile_linearLayoutAvatarWidth"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/userProfile_imageViewAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/global_imageViewAvatarDesc"
                android:padding="@dimen/userProfile_imageViewAvatarPadding"
                android:scaleType="centerInside"
                android:src="@drawable/avatar_donald_duck" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="@dimen/userProfile_linearLayoutMenuWidth"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/userProfile_textViewUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userProfile_textViewUserName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/userProfile_buttonLearn"
                android:layout_width="@dimen/userProfile_buttonWidth"
                android:layout_height="wrap_content"
                android:text="@string/userProfile_buttonLearn" />

            <Button
                android:id="@+id/userProfile_buttonPlay"
                android:layout_width="@dimen/userProfile_buttonWidth"
                android:layout_height="wrap_content"
                android:text="@string/userProfile_buttonPlay" />

            <Button
                android:id="@+id/userProfile_buttonScores"
                android:layout_width="@dimen/userProfile_buttonWidth"
                android:layout_height="wrap_content"
                android:text="@string/userProfile_buttonScores" />

            <Button
                android:id="@+id/userProfile_buttonSettings"
                android:layout_width="@dimen/userProfile_buttonWidth"
                android:layout_height="wrap_content"
                android:text="@string/userProfile_buttonSettings" />

            <Button
                android:id="@+id/userProfile_buttonAbout"
                android:layout_width="@dimen/userProfile_buttonWidth"
                android:layout_height="wrap_content"
                android:text="@string/userProfile_buttonAbout" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
