<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/global_imageViewBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/global_imageViewBackgroundDesc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/scoresPreview_textViewGameCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/global_textViewTopTitlePadding"
            android:text="@string/scorespreview_textViewGameCategory"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/scoresPreview_textViewTimesPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scorespreview_textViewTimesPlayed" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none" >

            <TableLayout
                android:id="@+id/scoresPreview_tableLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:showDividers="end" >
            </TableLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/scoresPreview_linearLayoutTotalScorePadding" >

            <TextView
                android:id="@+id/scoresPreview_textViewDateAndTimeVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scorespreview_textViewDateAndTimeVal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/scoresPreview_textViewTotalScoreLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scorespreview_textViewTotalScoreLbl" />

            <TextView
                android:id="@+id/scoresPreview_textViewTotalScoreVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/scoresPreview_linearLayoutPrevNextPadding"
            android:paddingTop="@dimen/scoresPreview_linearLayoutPrevNextPadding" >

            <Button
                android:id="@+id/scoresPreview_buttonPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scorespreview_buttonPrevious" />

            <Button
                android:id="@+id/scoresPreview_buttonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scorespreview_buttonNext" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
