<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/global_imageViewBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/global_imageViewBackgroundDesc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/globalGame_progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/global_textViewTopTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/global_textViewTopTitlePadding"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <FrameLayout
            android:id="@+id/writeGame_frameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/writeGame_imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/writingGame_imageViewDesc"
                android:scaleType="fitCenter" />

            <FrameLayout
                android:id="@+id/writeGame_frameLayoutCanvas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <com.johneris.kindergartengame.DrawView
                    android:id="@+id/writeGame_drawView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/globalGame_optionsTopBottomPadding"
            android:paddingTop="@dimen/globalGame_optionsTopBottomPadding" >

            <Button
                android:id="@+id/writeGame_buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writingGame_buttonSubmit" />

            <Button
                android:id="@+id/writeGame_buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writingGame_buttonClear" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
