<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/global_imageViewBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/global_imageViewBackgroundDesc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/numberGame_progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/numberGame_textViewNumberGameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/global_textViewTopTitlePadding"
            android:text="@string/numberGame_textViewNumberGameTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/numberGame_textViewN1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/numberGame_textViewPadding"
                android:text="@string/numberGame_textViewN"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/numberGame_textViewN2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/numberGame_textViewPadding"
                android:text="@string/numberGame_textViewN"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/numberGame_textViewN3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/numberGame_textViewPadding"
                android:text="@string/numberGame_textViewN"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <Button
                android:id="@+id/numberGame_buttonOption1"
                android:layout_width="@dimen/numberGame_buttonOptionWidth"
                android:layout_height="@dimen/numberGame_buttonOptionHeight"
                android:text="@string/numberGame_textViewN" />

            <Button
                android:id="@+id/numberGame_buttonOption2"
                android:layout_width="@dimen/numberGame_buttonOptionWidth"
                android:layout_height="@dimen/numberGame_buttonOptionHeight"
                android:text="@string/numberGame_textViewN" />

            <Button
                android:id="@+id/numberGame_buttonOption3"
                android:layout_width="@dimen/numberGame_buttonOptionWidth"
                android:layout_height="@dimen/numberGame_buttonOptionHeight"
                android:text="@string/numberGame_textViewN" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
