<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/global_imageViewBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/global_imageViewBackgroundDesc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <ImageButton
                android:id="@+id/global_buttonWinneThePooh"
                android:layout_width="@dimen/global_buttonAvatarWidth"
                android:layout_height="@dimen/global_buttonAvatarHeight"
                android:layout_margin="3dp"
                android:background="@drawable/buttonshape"
                android:contentDescription="@string/global_imageViewAvatarDesc"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:shadowColor="#54FF54"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="25"
                android:src="@drawable/avatar_winnie_the_pooh"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/global_buttonMickeyMouse"
                android:layout_width="@dimen/global_buttonAvatarWidth"
                android:layout_height="@dimen/global_buttonAvatarHeight"
                android:layout_margin="3dp"
                android:background="@drawable/buttonshape"
                android:contentDescription="@string/global_imageViewAvatarDesc"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:shadowColor="#54FF54"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="25"
                android:src="@drawable/avatar_mickey_mouse"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/global_buttonDonaldDuck"
                android:layout_width="@dimen/global_buttonAvatarWidth"
                android:layout_height="@dimen/global_buttonAvatarHeight"
                android:layout_margin="3dp"
                android:background="@drawable/buttonshape"
                android:contentDescription="@string/global_imageViewAvatarDesc"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:shadowColor="#54FF54"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="25"
                android:src="@drawable/avatar_donald_duck"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/global_buttonHelloKitty"
                android:layout_width="@dimen/global_buttonAvatarWidth"
                android:layout_height="@dimen/global_buttonAvatarHeight"
                android:layout_margin="3dp"
                android:background="@drawable/buttonshape"
                android:contentDescription="@string/global_imageViewAvatarDesc"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:shadowColor="#54FF54"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="25"
                android:src="@drawable/avatar_hello_kitty"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <ImageButton
                android:id="@+id/global_buttonDora"
                android:layout_width="@dimen/global_buttonAvatarWidth"
                android:layout_height="@dimen/global_buttonAvatarHeight"
                android:layout_margin="3dp"
                android:background="@drawable/buttonshape"
                android:contentDescription="@string/global_imageViewAvatarDesc"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:shadowColor="#54FF54"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="25"
                android:src="@drawable/avatar_dora"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/global_buttonSpongebob"
                android:layout_width="@dimen/global_buttonAvatarWidth"
                android:layout_height="@dimen/global_buttonAvatarHeight"
                android:layout_margin="3dp"
                android:background="@drawable/buttonshape"
                android:contentDescription="@string/global_imageViewAvatarDesc"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:shadowColor="#54FF54"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="25"
                android:src="@drawable/avatar_spongebob"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/global_buttonPatrick"
                android:layout_width="@dimen/global_buttonAvatarWidth"
                android:layout_height="@dimen/global_buttonAvatarHeight"
                android:layout_margin="3dp"
                android:background="@drawable/buttonshape"
                android:contentDescription="@string/global_imageViewAvatarDesc"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:shadowColor="#54FF54"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="25"
                android:src="@drawable/avatar_patrick"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/global_buttonTweetyBird"
                android:layout_width="@dimen/global_buttonAvatarWidth"
                android:layout_height="@dimen/global_buttonAvatarHeight"
                android:layout_margin="3dp"
                android:background="@drawable/buttonshape"
                android:contentDescription="@string/global_imageViewAvatarDesc"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:shadowColor="#54FF54"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="25"
                android:src="@drawable/avatar_tweety_bird"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/newUser_textViewEnterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newUser_textViewEnterName" />

            <EditText
                android:id="@+id/newUser_editTextName"
                android:layout_width="@dimen/newUser_editTextNameWidth"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>